--- a/support.html
+++ b/support.html
@@ -52,31 +52,19 @@
     <div class="bunner">
         <div class="wrapper">
             <div class="bunnerLeft">
-                    <h1>Estonian <br> 
-                        company <br>
-                        registration <br>
-                        and support <br>
-                        with ease
+                    <h1>
+                        Legal <br> support of <br> the company
                     </h1>
-                    <h2>Launch your business in Estonia and benefit
-                        from zero income tax on all income.</h2>
-                    <a href="#" class="bunnerLeftBtn">Learn more</a>
+                   <div class="bunnerLeftContainerBtn">
+                        <a href="#" class="bunnerLeftConsultation">Consultation</a>
+                        <a href="#" class="bunnerLeftBtn">Learn more</a>
+                   </div>
             </div>
             <div class="bunnerImg">
-                <img src="img/bunner.png" alt="">
+                <img src="img/suportBanner.png" alt="">
             </div>
             <div class="bunnerRight">
-                    <img src="img/bannerPlanwet.png" alt="">
-            </div>
-        </div>
-        <div class="showContainer">
-            <svg onclick="svgClose()" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-            <div>
-                <p class="Just">Just 450EUR</p>
-                <p class="showContainerFull">for <strong>full package</strong> with e-residency applied</p>
-                <button class="showContainerButton">GET STARTED</button>
+                <img src="img/bannerPlanwet.png" alt="">
             </div>
         </div>
     </div>
@@ -211,7 +199,7 @@
     </nav>
     <!--Navigation-->
 
-    <div class="transformSection">
+    <!-- <div class="transformSection">
         <div class="wrapper">
             <div class="transformSectionLeft">
                 <h2>TRANSFORM YOUR IDEAS INTO SUCCESS</h2>
@@ -282,62 +270,30 @@
                 <div class="transformSliderDots"></div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--TRANSFORM YOUR IDEAS INTO SUCCESS-->
 
     <div class="fromAreas">
         <div class="wrapper">
             <div class="fromAreasLeft">
-                <h2>We are approached from areas:</h2>
+                <h2>Legal support <br> of the <br> business life <br> cycle</h2>
                 <ul class="tabs">
                     <li>
-                        <a href="#tab1">FREELANCE 
+                        <a href="#tab1" class="supportTabsLink">BUSINESS IDEA 
                         </a>
-                        <svg width="22" height="12" viewBox="0 0 22 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15.2929 10.2929C14.9024 10.6834 14.9024 11.3166 15.2929 11.7071C15.6834 12.0976 16.3166 12.0976 16.7071 11.7071L21.7071 6.70711C22.0976 6.31658 22.0976 5.68342 21.7071 5.29289L16.7071 0.292894C16.3166 -0.0976312 15.6834 -0.0976312 15.2929 0.292894C14.9024 0.683417 14.9024 1.31658 15.2929 1.70711L18.5858 5H1C0.447715 5 0 5.44772 0 6C0 6.55229 0.447715 7 1 7H18.5858L15.2929 10.2929Z" fill="#9A97AE"/>
-                        </svg>   
+                        <img src="img/btnArrow.svg" alt="">  
                     </li>
                     <li>
-                        <a href="#tab2">IT company</a>
-                        <svg width="22" height="12" viewBox="0 0 22 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15.2929 10.2929C14.9024 10.6834 14.9024 11.3166 15.2929 11.7071C15.6834 12.0976 16.3166 12.0976 16.7071 11.7071L21.7071 6.70711C22.0976 6.31658 22.0976 5.68342 21.7071 5.29289L16.7071 0.292894C16.3166 -0.0976312 15.6834 -0.0976312 15.2929 0.292894C14.9024 0.683417 14.9024 1.31658 15.2929 1.70711L18.5858 5H1C0.447715 5 0 5.44772 0 6C0 6.55229 0.447715 7 1 7H18.5858L15.2929 10.2929Z" fill="#9A97AE"/>
-                        </svg>    
+                        <a href="#tab2" class="supportTabsLink">BUSINESS REGISTRATION</a>
+                        <img src="img/btnArrow.svg" alt="">  
                     </li>
                     <li>
-                        <a href="#tab3">TRADING</a>
-                        <svg width="22" height="12" viewBox="0 0 22 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15.2929 10.2929C14.9024 10.6834 14.9024 11.3166 15.2929 11.7071C15.6834 12.0976 16.3166 12.0976 16.7071 11.7071L21.7071 6.70711C22.0976 6.31658 22.0976 5.68342 21.7071 5.29289L16.7071 0.292894C16.3166 -0.0976312 15.6834 -0.0976312 15.2929 0.292894C14.9024 0.683417 14.9024 1.31658 15.2929 1.70711L18.5858 5H1C0.447715 5 0 5.44772 0 6C0 6.55229 0.447715 7 1 7H18.5858L15.2929 10.2929Z" fill="#9A97AE"/>
-                        </svg>   
+                        <a href="#tab3" class="supportTabsLink">CURRENT ACTIVITIES</a>
+                        <img src="img/btnArrow.svg" alt="">
                     </li>
                     <li>
-                        <a href="#tab4">Online Services</a>
-                        <svg width="22" height="12" viewBox="0 0 22 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15.2929 10.2929C14.9024 10.6834 14.9024 11.3166 15.2929 11.7071C15.6834 12.0976 16.3166 12.0976 16.7071 11.7071L21.7071 6.70711C22.0976 6.31658 22.0976 5.68342 21.7071 5.29289L16.7071 0.292894C16.3166 -0.0976312 15.6834 -0.0976312 15.2929 0.292894C14.9024 0.683417 14.9024 1.31658 15.2929 1.70711L18.5858 5H1C0.447715 5 0 5.44772 0 6C0 6.55229 0.447715 7 1 7H18.5858L15.2929 10.2929Z" fill="#9A97AE"/>
-                        </svg>   
-                    </li>
-                    <li>
-                        <a href="#tab5">Educational projects</a>
-                        <svg width="22" height="12" viewBox="0 0 22 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15.2929 10.2929C14.9024 10.6834 14.9024 11.3166 15.2929 11.7071C15.6834 12.0976 16.3166 12.0976 16.7071 11.7071L21.7071 6.70711C22.0976 6.31658 22.0976 5.68342 21.7071 5.29289L16.7071 0.292894C16.3166 -0.0976312 15.6834 -0.0976312 15.2929 0.292894C14.9024 0.683417 14.9024 1.31658 15.2929 1.70711L18.5858 5H1C0.447715 5 0 5.44772 0 6C0 6.55229 0.447715 7 1 7H18.5858L15.2929 10.2929Z" fill="#9A97AE"/>
-                        </svg>   
-                    </li>
-                    <li>
-                        <a href="#tab6">Blockchain</a>
-                        <svg width="22" height="12" viewBox="0 0 22 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15.2929 10.2929C14.9024 10.6834 14.9024 11.3166 15.2929 11.7071C15.6834 12.0976 16.3166 12.0976 16.7071 11.7071L21.7071 6.70711C22.0976 6.31658 22.0976 5.68342 21.7071 5.29289L16.7071 0.292894C16.3166 -0.0976312 15.6834 -0.0976312 15.2929 0.292894C14.9024 0.683417 14.9024 1.31658 15.2929 1.70711L18.5858 5H1C0.447715 5 0 5.44772 0 6C0 6.55229 0.447715 7 1 7H18.5858L15.2929 10.2929Z" fill="#9A97AE"/>
-                        </svg>   
-                    </li>
-                    <li>
-                        <a href="#tab7">MARKETPLACE</a>
-                        <svg width="22" height="12" viewBox="0 0 22 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15.2929 10.2929C14.9024 10.6834 14.9024 11.3166 15.2929 11.7071C15.6834 12.0976 16.3166 12.0976 16.7071 11.7071L21.7071 6.70711C22.0976 6.31658 22.0976 5.68342 21.7071 5.29289L16.7071 0.292894C16.3166 -0.0976312 15.6834 -0.0976312 15.2929 0.292894C14.9024 0.683417 14.9024 1.31658 15.2929 1.70711L18.5858 5H1C0.447715 5 0 5.44772 0 6C0 6.55229 0.447715 7 1 7H18.5858L15.2929 10.2929Z" fill="#9A97AE"/>
-                        </svg>   
-                    </li>
-                    <li>
-                        <a href="#tab8">LOGISTICS</a>
-                        <svg width="22" height="12" viewBox="0 0 22 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15.2929 10.2929C14.9024 10.6834 14.9024 11.3166 15.2929 11.7071C15.6834 12.0976 16.3166 12.0976 16.7071 11.7071L21.7071 6.70711C22.0976 6.31658 22.0976 5.68342 21.7071 5.29289L16.7071 0.292894C16.3166 -0.0976312 15.6834 -0.0976312 15.2929 0.292894C14.9024 0.683417 14.9024 1.31658 15.2929 1.70711L18.5858 5H1C0.447715 5 0 5.44772 0 6C0 6.55229 0.447715 7 1 7H18.5858L15.2929 10.2929Z" fill="#9A97AE"/>
-                        </svg>   
+                        <a href="#tab4" class="supportTabsLink">LIQUIDATION</a>
+                        <img src="img/btnArrow.svg" alt="">
                     </li>
                 </ul>
             </div>
@@ -509,6 +465,67 @@
         </div>
     </div>
     <!--We are approached from areas:-->
+
+    <div class="stages">
+        <div class="wrapper">
+            <div class="stagesLeft">
+                <h2>Stages of cooperation with us</h2>
+                <p>Lorem ipsum dolor sit amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint velit officia consequat duis enim velit mollit.</p>
+            </div>
+            <div class="stagesRight">
+                <ul>
+                    <li class="stagesRight1">
+                        <strong>Appeal</strong>
+                        Call, leave a request or write
+                    </li>
+                    <li class="stagesRight2">
+                        <strong>Discussing the task with the manager</strong>
+                        The personal manager will clarify the request, ask additional questions
+                    </li>
+                    <li class="stagesRight3">
+                        <strong>Filling out the form</strong>
+                        After the conversation, we send a form to evaluate the work and develop a contract
+                    </li>
+                    <li class="stagesRight4">
+                        <strong>Conclusion of an NDA agreement</strong>
+                        We sign a non-disclosure agreement with the terms of work
+                    </li>
+                    <li class="stagesRight5">
+                        <strong>Payment</strong>
+                        Payment for services according to the list of company services
+                    </li>
+                    <li class="stagesRight6">
+                        <strong>Execution of works</strong>
+                        Provision of services in accordance with the terms described in the contract
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!--Stages of cooperation with us-->
+
+    <div class="supportForm">
+        <div class="wrapper">
+            <h2>Consultation with a manager</h2>
+            <p>Fill out the form, the manager will advise you as soon as possible</p>
+            <form action="">
+                <div class="supportFormName">
+                    <input type="text" name="" id="">
+                </div>
+                <div class="supportFormTel">
+                    <input type="tel" name="" id="">
+                </div>
+                <div class="supportFormEmail">
+                    <input type="email" name="" id="">
+                </div>
+                <div class="supportFormSubmit">
+                    <input type="submit" value="">
+                    <img src="img/btnArrow.svg" alt="">
+                </div>
+            </form>
+        </div>
+    </div>
+    <!--Forma-->
 
     <div class="aboutMaxwise">
         <div class="wrapper">
@@ -777,6 +794,5 @@
     <script src="script/tabs.js"></script>
     <script src="script/burger.js"></script>
     <script src="script/blogSlider.js"></script>
-    <script src="script/animation.js"></script>
 </body>
 </html>
