--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <title>Maxwise</title>
 </head>
 <body>
+    <div class="fullpage">
+       <button>
+            <img src="img/fulpageArrow.svg" alt="">
+       </button>
+    </div>
 
     <header>
         <div class="wrapper">
