--- a/support.html
+++ b/support.html
@@ -510,22 +510,139 @@
             <p>Fill out the form, the manager will advise you as soon as possible</p>
             <form action="">
                 <div class="supportFormName">
-                    <input type="text" name="" id="">
+                    <input type="text" name="" id="" placeholder="Name">
                 </div>
                 <div class="supportFormTel">
-                    <input type="tel" name="" id="">
+                    <input type="tel" name="" id="" placeholder="Phone">
                 </div>
                 <div class="supportFormEmail">
-                    <input type="email" name="" id="">
+                    <input type="email" name="" id="" placeholder="Email">
                 </div>
                 <div class="supportFormSubmit">
-                    <input type="submit" value="">
-                    <img src="img/btnArrow.svg" alt="">
+                    <input type="submit" value="Send">
                 </div>
             </form>
         </div>
     </div>
     <!--Forma-->
+
+    <div class="feedback">
+        <div class="wrapper">
+            <div class="feedbackTop">
+                <h2>Feedback from our clients</h2>
+                <button>Leave feedback
+                    <img src="img/star.svg" alt="">
+                </button>
+            </div>
+            <div class="feedbackContent">
+                <div class="feedbackContentSection">
+                    <div class="feedbackContentSectionItem">
+                        <div class="feedbackContentSectionItemTop">
+                            <p class="hv">HB</p>
+                            <div class="Names">
+                                <p class="NamesName">Ayse Nuriye Ertas</p>
+                                <p class="date">Dec 30, 2019 05:18</p>
+                            </div>
+                        </div>
+                        <p class="feedbackContentText">Their customer support team is great! :) Always there to help.</p>
+                        <a href="#" class="showOriginal">Show original</a>
+                    </div>
+                    <div class="feedbackContentSectionItem">
+                        <div class="feedbackContentSectionItemTop">
+                            <p class="hv">HB</p>
+                            <div class="Names">
+                                <p class="NamesName">Ayse Nuriye Ertas</p>
+                                <p class="date">Dec 30, 2019 05:18</p>
+                            </div>
+                        </div>
+                        <p class="feedbackContentText">Their customer support team is great! :) Always there to help.</p>
+                        <a href="#" class="showOriginal">Show original</a>
+                    </div>
+                    <div class="feedbackContentSectionItem">
+                        <div class="feedbackContentSectionItemTop">
+                            <p class="hv">HB</p>
+                            <div class="Names">
+                                <p class="NamesName">Ayse Nuriye Ertas</p>
+                                <p class="date">Dec 30, 2019 05:18</p>
+                            </div>
+                        </div>
+                        <p class="feedbackContentText">Their customer support team is great! :) Always there to help.</p>
+                        <a href="#" class="showOriginal">Show original</a>
+                    </div>
+                </div>
+                <div class="feedbackContentSection">
+                    <div class="feedbackContentSectionItem">
+                        <div class="feedbackContentSectionItemTop">
+                            <p class="hv">HB</p>
+                            <div class="Names">
+                                <p class="NamesName">Ayse Nuriye Ertas</p>
+                                <p class="date">Dec 30, 2019 05:18</p>
+                            </div>
+                        </div>
+                        <p class="feedbackContentText">Their customer support team is great! :) Always there to help.</p>
+                        <a href="#" class="showOriginal">Show original</a>
+                    </div>
+                    <div class="feedbackContentSectionItem">
+                        <div class="feedbackContentSectionItemTop">
+                            <p class="hv">HB</p>
+                            <div class="Names">
+                                <p class="NamesName">Ayse Nuriye Ertas</p>
+                                <p class="date">Dec 30, 2019 05:18</p>
+                            </div>
+                        </div>
+                        <p class="feedbackContentText">Their customer support team is great! :) Always there to help.</p>
+                        <a href="#" class="showOriginal">Show original</a>
+                    </div>
+                    <div class="feedbackContentSectionItem">
+                        <div class="feedbackContentSectionItemTop">
+                            <p class="hv">HB</p>
+                            <div class="Names">
+                                <p class="NamesName">Ayse Nuriye Ertas</p>
+                                <p class="date">Dec 30, 2019 05:18</p>
+                            </div>
+                        </div>
+                        <p class="feedbackContentText">Their customer support team is great! :) Always there to help.</p>
+                        <a href="#" class="showOriginal">Show original</a>
+                    </div>
+                </div>
+                <div class="feedbackContentSection">
+                    <div class="feedbackContentSectionItem">
+                        <div class="feedbackContentSectionItemTop">
+                            <p class="hv">HB</p>
+                            <div class="Names">
+                                <p class="NamesName">Ayse Nuriye Ertas</p>
+                                <p class="date">Dec 30, 2019 05:18</p>
+                            </div>
+                        </div>
+                        <p class="feedbackContentText">Their customer support team is great! :) Always there to help.</p>
+                        <a href="#" class="showOriginal">Show original</a>
+                    </div>
+                    <div class="feedbackContentSectionItem">
+                        <div class="feedbackContentSectionItemTop">
+                            <p class="hv">HB</p>
+                            <div class="Names">
+                                <p class="NamesName">Ayse Nuriye Ertas</p>
+                                <p class="date">Dec 30, 2019 05:18</p>
+                            </div>
+                        </div>
+                        <p class="feedbackContentText">Their customer support team is great! :) Always there to help.</p>
+                        <a href="#" class="showOriginal">Show original</a>
+                    </div>
+                    <div class="feedbackContentSectionItem">
+                        <div class="feedbackContentSectionItemTop">
+                            <p class="hv">HB</p>
+                            <div class="Names">
+                                <p class="NamesName">Ayse Nuriye Ertas</p>
+                                <p class="date">Dec 30, 2019 05:18</p>
+                            </div>
+                        </div>
+                        <p class="feedbackContentText">Their customer support team is great! :) Always there to help.</p>
+                        <a href="#" class="showOriginal">Show original</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="aboutMaxwise">
         <div class="wrapper">
