--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </a>
             <ul>
                 <li>
-                    <a href="#">Our Expertise</a>
+                    <a href="support.html">Our Expertise</a>
                 </li>
                 <li>
                     <a href="#">Estonian Companies</a>
