--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="#">Rates</a>
                 </li>
                 <li>
-                    <a href="#">Blog</a>
+                    <a href="blog.html">Blog</a>
                 </li>
             </ul>
             <div class="toggle">
