--- a/registration.html
+++ b/registration.html
@@ -72,7 +72,7 @@
                 <img src="img/bannerRegistration.png" alt="">
             </div>
         </div>
-        <div class="showContainer">
+        <!-- <div class="showContainer">
             <div class="showContainerSection">
                 <svg onclick="svgClose()" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -83,7 +83,7 @@
                     <button class="showContainerButton">GET STARTED</button>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <!--Bunner-->
 
@@ -238,6 +238,9 @@
             </div>
             <div class="fromAreasRight fromAreasRegistrationRight">
                 <div  id="tab1" class="fromAreasTabsContainer">
+                    <svg class="closeSvgBlog" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
                     <h4>Estonian company registration with an e-residency card</h4>
                     <p>Such registration is possible, if founder has a valid e-residency card, ID-card reader, e-residency card`s PIN codes and a special software solution. If you do not have such, you can apply for an e-residency card here: 
                     <a href="https://apply.gov.ee/">https://apply.gov.ee/</a>
@@ -296,6 +299,9 @@
                 </div>
 
                 <div  id="tab2" class="fromAreasTabsContainer fromAreasTabsContainer2">
+                    <svg class="closeSvgBlog" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
                         <h3>Registration of an Estonian company in the notary office personally or via authorized person</h3>
                         <p>Such registration of a company is possible if the founder does not have an e-residency card</p>
                         <div class="tabsList2">
