--- a/registration.html
+++ b/registration.html
@@ -72,7 +72,7 @@
                 <img src="img/bannerRegistration.png" alt="">
             </div>
         </div>
-        <!-- <div class="showContainer">
+        <div class="showContainer">
             <div class="showContainerSection">
                 <svg onclick="svgClose()" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -83,7 +83,7 @@
                     <button class="showContainerButton">GET STARTED</button>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
     <!--Bunner-->
 
@@ -237,7 +237,7 @@
                 </ul>
             </div>
             <div class="fromAreasRight fromAreasRegistrationRight">
-                <div  id="tab1" class="fromAreasTabsContainer">
+                <div  id="tab1" class="fromAreasTabsContainer fromAreasTabsRegitstration">
                     <svg class="closeSvgBlog" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
@@ -298,7 +298,7 @@
                         </div>
                 </div>
 
-                <div  id="tab2" class="fromAreasTabsContainer fromAreasTabsContainer2">
+                <div  id="tab2" class="fromAreasTabsContainer fromAreasTabsContainer2 fromAreasTabsRegitstration">
                     <svg class="closeSvgBlog" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M25 1L1 25M1 1L25 25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
