--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <a href="support.html">Our Expertise</a>
                 </li>
                 <li>
-                    <a href="#">Estonian Companies</a>
+                    <a href="blog.html">Estonian Companies</a>
                 </li>
                 <li>
-                    <a href="#">LegalBox</a>
+                    <a href="registration.html">LegalBox</a>
                 </li>
                 <li>
                     <a href="#">Rates</a>
