--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <a href="#">
                     <img src="img/logoBurger.png" alt="">
                 </a>
-                <a href="#" class="burger">
+                <a href="#" class="burgerClose">
                     <img src="img/close.png" alt="">
                 </a>
         </div>
