--- a/registration.html
+++ b/registration.html
@@ -68,7 +68,7 @@
             <div class="bunnerImg bunnerRegistration">
                 <img src="img/bannerRegistration.png" alt="">
             </div>
-            <div class="bunnerRight">
+            <div class="bunnerRight bunnerRightRegistration">
                 <img src="img/bannerRegistration.png" alt="">
             </div>
         </div>
