--- a/support.html
+++ b/support.html
@@ -65,10 +65,10 @@
                         <a href="#" class="bunnerLeftBtn">Learn more</a>
                    </div>
             </div>
-            <div class="bunnerImg">
+            <div class="bunnerImg bunnerImgSupport">
                 <img src="img/suportBanner.png" alt="">
             </div>
-            <div class="bunnerRight">
+            <div class="bunnerRight bunnerRightSupport">
                 <img src="img/suportBannerMobile.png" alt="">
             </div>
         </div>
