--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             </div>
         </div>
         <div class="fromAreasRight">
-            <div  id="tab1" class="fromAreasTabsContainer">
+            <div  id="tab1" class="fromAreasTabsContainer tabsPositionSvg">
                 <div class="fromAreasTabsContainerLeft">
                     <h3>FREELANCE</h3>
                     <p>For self-employed, an Estonian company is the best choice in terms of costs and convenience. Basic bookkeeping procedures and minimum submission of accounting records let you run your business with no extra effort.</p>
@@ -370,7 +370,7 @@
                 </svg>
             </div>
 
-            <div  id="tab2" class="fromAreasTabsContainer">
+            <div  id="tab2" class="fromAreasTabsContainer tabsPositionSvg">
                 <div class="fromAreasTabsContainerLeft">
                     <h3>IT company</h3>
                     <p>An Estonia company for IT businesses allows to run big projects without the tax burden (before dividends withdraw). </p>
@@ -390,7 +390,7 @@
                 </svg>
             </div>
             
-            <div  id="tab3" class="fromAreasTabsContainer">
+            <div  id="tab3" class="fromAreasTabsContainer tabsPositionSvg">
                 <div class="fromAreasTabsContainerLeft">
                     <h3>TRADING</h3>
                     <p>If international trade is organized through an Estonian company, there’s no corporate income tax.</p>
@@ -411,7 +411,7 @@
                 </svg>
             </div>
 
-            <div  id="tab4" class="fromAreasTabsContainer">
+            <div  id="tab4" class="fromAreasTabsContainer tabsPositionSvg">
                 <div class="fromAreasTabsContainerLeft">
                     <h3>Online Services</h3>
                     <p>For various service providers, such as ticket, event, telecommunication and other services, an Estonian company is a cost-effective solution, taking unnecessary stress from running your business.</p>
@@ -432,7 +432,7 @@
                 </svg>
             </div>
 
-            <div  id="tab5" class="fromAreasTabsContainer">
+            <div  id="tab5" class="fromAreasTabsContainer tabsPositionSvg">
                 <div class="fromAreasTabsContainerLeft">
                     <p>The online educational services can immensely benefit from running their business in Estonia.</p>
                     <p> If you sell your digital services within the EU, you can apply for the MOSS scheme and obtain an Estonian VAT number.</p>
@@ -451,7 +451,7 @@
                 </svg>
             </div>
             
-            <div  id="tab6" class="fromAreasTabsContainer">
+            <div  id="tab6" class="fromAreasTabsContainer tabsPositionSvg">
                 <div class="fromAreasTabsContainerLeft">
                     <h3>Blockchain</h3>
                     <p>An Estonian company is an excellent choice for cryptocurrency businesses. In Estonia, it is easy to obtain a <a href="#">license</a> and it permits to do both – client`s wallet administration and cryptocurrency conversion to fiat-currency.</p>
@@ -471,7 +471,7 @@
                 </svg>
             </div>
 
-            <div  id="tab7" class="fromAreasTabsContainer">
+            <div  id="tab7" class="fromAreasTabsContainer tabsPositionSvg">
                 <div class="fromAreasTabsContainerLeft">
                     <h3>MARKETPLACE</h3>
                     <p>If you are trading or providing services on your website, an Estonian company is a time-saving and cost-effective solution.</p>
@@ -492,7 +492,7 @@
                 </svg>
             </div>
 
-            <div  id="tab8" class="fromAreasTabsContainer">
+            <div  id="tab8" class="fromAreasTabsContainer tabsPositionSvg">
                 <div class="fromAreasTabsContainerLeft">
                     <h3>LOGISTICS</h3>
                     <p>For transport and logistic companies, having an Estonian company means you can manage your business with no extra effort and costs.</p>
@@ -572,6 +572,18 @@
                 <h2>From our blog</h2>
                 <p>Our experts often publish useful articles on the legal topic so that you can get the most benefit for yourself</p>
                 <button>Go to blog</button>
+            </div>
+            <div class="blogSliderArrow">
+                <div class="blogSliderPrev">
+                    <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M6.42292 1.42259C6.74835 1.09715 6.74835 0.569513 6.42292 0.244077C6.09748 -0.0813601 5.56984 -0.0813601 5.2444 0.244076L1.07774 4.41074C0.752301 4.73618 0.752301 5.26382 1.07774 5.58925L5.2444 9.75592C5.56984 10.0814 6.09748 10.0814 6.42291 9.75592C6.74835 9.43048 6.74835 8.90285 6.42291 8.57741L3.67884 5.83333L18.3337 5.83333C18.7939 5.83333 19.167 5.46024 19.167 5C19.167 4.53976 18.7939 4.16667 18.3337 4.16667L3.67884 4.16666L6.42292 1.42259Z" fill="#1E1D28"/>
+                    </svg>    
+                </div>
+                <div class="blogSliderNext">
+                    <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13.5771 8.57741C13.2516 8.90285 13.2516 9.43049 13.5771 9.75592C13.9025 10.0814 14.4302 10.0814 14.7556 9.75592L18.9223 5.58926C19.2477 5.26382 19.2477 4.73618 18.9223 4.41075L14.7556 0.244078C14.4302 -0.0813593 13.9025 -0.0813593 13.5771 0.244078C13.2516 0.569515 13.2516 1.09715 13.5771 1.42259L16.3212 4.16667H1.66634C1.2061 4.16667 0.833008 4.53976 0.833008 5C0.833008 5.46024 1.2061 5.83333 1.66634 5.83333H16.3212L13.5771 8.57741Z" fill="#1E1D28"/>
+                    </svg>  
+                </div>
             </div>
             <div class="sliderContainerblog">
                 <div class="blogContent">
@@ -655,18 +667,6 @@
                         <button>Learn more</button>
                     </div>
                 </div>    
-            </div>
-            <div class="blogSliderArrow">
-                <div class="blogSliderPrev">
-                    <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M6.42292 1.42259C6.74835 1.09715 6.74835 0.569513 6.42292 0.244077C6.09748 -0.0813601 5.56984 -0.0813601 5.2444 0.244076L1.07774 4.41074C0.752301 4.73618 0.752301 5.26382 1.07774 5.58925L5.2444 9.75592C5.56984 10.0814 6.09748 10.0814 6.42291 9.75592C6.74835 9.43048 6.74835 8.90285 6.42291 8.57741L3.67884 5.83333L18.3337 5.83333C18.7939 5.83333 19.167 5.46024 19.167 5C19.167 4.53976 18.7939 4.16667 18.3337 4.16667L3.67884 4.16666L6.42292 1.42259Z" fill="#1E1D28"/>
-                    </svg>    
-                </div>
-                <div class="blogSliderNext">
-                    <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M13.5771 8.57741C13.2516 8.90285 13.2516 9.43049 13.5771 9.75592C13.9025 10.0814 14.4302 10.0814 14.7556 9.75592L18.9223 5.58926C19.2477 5.26382 19.2477 4.73618 18.9223 4.41075L14.7556 0.244078C14.4302 -0.0813593 13.9025 -0.0813593 13.5771 0.244078C13.2516 0.569515 13.2516 1.09715 13.5771 1.42259L16.3212 4.16667H1.66634C1.2061 4.16667 0.833008 4.53976 0.833008 5C0.833008 5.46024 1.2061 5.83333 1.66634 5.83333H16.3212L13.5771 8.57741Z" fill="#1E1D28"/>
-                    </svg>  
-                </div>
             </div>
             <div class="blogSliderDots"></div>
         </div>
