--- a/index.html
+++ b/index.html
@@ -227,6 +227,18 @@
                 <h4>WE EXPERIENCE MORE THAN 27 YEARS</h4>
             </div>
             <div class="transformSectionRight">
+                <div class="transformSliderArrow">
+                    <div class="transformSliderPrev">
+                        <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M6.42292 1.42259C6.74835 1.09715 6.74835 0.569513 6.42292 0.244077C6.09748 -0.0813601 5.56984 -0.0813601 5.2444 0.244076L1.07774 4.41074C0.752301 4.73618 0.752301 5.26382 1.07774 5.58925L5.2444 9.75592C5.56984 10.0814 6.09748 10.0814 6.42291 9.75592C6.74835 9.43048 6.74835 8.90285 6.42291 8.57741L3.67884 5.83333L18.3337 5.83333C18.7939 5.83333 19.167 5.46024 19.167 5C19.167 4.53976 18.7939 4.16667 18.3337 4.16667L3.67884 4.16666L6.42292 1.42259Z" fill="#1E1D28"/>
+                        </svg>    
+                    </div>
+                    <div class="transformSliderNext">
+                        <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13.5771 8.57741C13.2516 8.90285 13.2516 9.43049 13.5771 9.75592C13.9025 10.0814 14.4302 10.0814 14.7556 9.75592L18.9223 5.58926C19.2477 5.26382 19.2477 4.73618 18.9223 4.41075L14.7556 0.244078C14.4302 -0.0813593 13.9025 -0.0813593 13.5771 0.244078C13.2516 0.569515 13.2516 1.09715 13.5771 1.42259L16.3212 4.16667H1.66634C1.2061 4.16667 0.833008 4.53976 0.833008 5C0.833008 5.46024 1.2061 5.83333 1.66634 5.83333H16.3212L13.5771 8.57741Z" fill="#1E1D28"/>
+                        </svg>  
+                    </div>
+                </div>
                 <div class="transformSlider">
                     <div class="transformItem">
                         <h3>Company registration</h3>
@@ -272,18 +284,6 @@
                             Proceeding of VAT Compliance
                             Cross- border taxation rules appliance</p>
                             <button>Learn more</button>
-                    </div>
-                </div>
-                <div class="transformSliderArrow">
-                    <div class="transformSliderPrev">
-                        <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M6.42292 1.42259C6.74835 1.09715 6.74835 0.569513 6.42292 0.244077C6.09748 -0.0813601 5.56984 -0.0813601 5.2444 0.244076L1.07774 4.41074C0.752301 4.73618 0.752301 5.26382 1.07774 5.58925L5.2444 9.75592C5.56984 10.0814 6.09748 10.0814 6.42291 9.75592C6.74835 9.43048 6.74835 8.90285 6.42291 8.57741L3.67884 5.83333L18.3337 5.83333C18.7939 5.83333 19.167 5.46024 19.167 5C19.167 4.53976 18.7939 4.16667 18.3337 4.16667L3.67884 4.16666L6.42292 1.42259Z" fill="#1E1D28"/>
-                        </svg>    
-                    </div>
-                    <div class="transformSliderNext">
-                        <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M13.5771 8.57741C13.2516 8.90285 13.2516 9.43049 13.5771 9.75592C13.9025 10.0814 14.4302 10.0814 14.7556 9.75592L18.9223 5.58926C19.2477 5.26382 19.2477 4.73618 18.9223 4.41075L14.7556 0.244078C14.4302 -0.0813593 13.9025 -0.0813593 13.5771 0.244078C13.2516 0.569515 13.2516 1.09715 13.5771 1.42259L16.3212 4.16667H1.66634C1.2061 4.16667 0.833008 4.53976 0.833008 5C0.833008 5.46024 1.2061 5.83333 1.66634 5.83333H16.3212L13.5771 8.57741Z" fill="#1E1D28"/>
-                        </svg>  
                     </div>
                 </div>
                 <div class="transformSliderDots"></div>
@@ -790,7 +790,7 @@
         </div>
     </footer>
     <!--Footer-->
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.2.min.js" crossorigin="anonymous"></script>
     <script src="script/slick.js"></script>
     <script src="script/transformSlider.js"></script>
     <script src="script/tabs.js"></script>
