--- a/blog.html
+++ b/blog.html
@@ -185,7 +185,7 @@
     </div>
     <!--Navigation-->
 
-    <div class="blogContent">
+    <div class="blogContent blogContentBack">
         <div class="wrapper">
             <div class="blogContentTop">
                 <h2>Blog</h2>
