--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
                 <a href="#">
                     <img src="img/logoBurger.png" alt="">
                 </a>
-                <a href="#" class="burger-open" onclick="myClose()">
+                <a href="#" class="burger-open">
                     <img src="img/close.png" alt="">
                 </a>
         </div>
